--- a/popup/popup.css
+++ b/popup/popup.css
@@ -143,9 +143,9 @@ button:active {
 }
 
 .slide-container {
-    visibility: hidden;
-    display: none;
-    /* display: flex; */
+    /* visibility: hidden; */
+    /* display: none; */
+    display: flex;
     width: 100%;
     margin: 10px;
 }
